syntax = "proto3";

option csharp_namespace = "GrpcCqrs101";

package greet;

// The greeting service definition.
service Greeter {
  // Sends a greeting
  rpc SayHello (HelloRequest) returns (HelloReply);
  rpc GetCustomer (ConsumerRequest) returns (ConsumerResponse);
}

message ConsumerRequest {
  string id = 1;
}

message ConsumerResponse {
  string id = 1;
  string first_name = 2;
  string last_name = 3;
  string address = 4;
  string mobile_number =5; 
  string created_at = 6;
  string updated_at = 7;
}

// The request message containing the user's name.
message HelloRequest {
}

// The response message containing the greetings.
message HelloReply {
  string message = 1;
  string first_name = 2;
}
